fixing form dimensions on small devices

--- a/src/sections/Contact/contact.css
+++ b/src/sections/Contact/contact.css
@@ -97,6 +97,7 @@ button:disabled {
     section.contact-container #message {
         padding: 0.5rem 1rem;
         margin-top: 1rem;
+        width:120%;
     }
 
     section.contact-container .submit {
